Fix dark mode

--- a/styles2.css
+++ b/styles2.css
@@ -25,9 +25,9 @@ body{
 }
 
 body.dark{
-    --body-color: #18191A;
-    --nav-color: #242526;
-    --side-nav: #242526;
+    --body-color: #000000;
+    --nav-color: #4070F4;
+    --side-nav: #ffffff;
 }
 
 nav{
